# UR3e-Pick-and-Place-

./: README.md
ros2_ws/src/: grasp_box.urdf  grasp_box2.urdf
ros2_ws/src/get_object_pose_action_client/: CMakeLists.txt  package.xml
ros2_ws/src/get_object_pose_action_client/src/: get_object_pose_action_client.cpp
ros2_ws/src/moveit2_scripts/: CMakeLists.txt
ros2_ws/src/moveit2_scripts/launch/: approach_retreat_trajectory.launch.py  double_motion_trajectory.launch.py  goal_pose_trajectory.launch.py
ros2_ws/src/my_moveit_config/: .setup_assistant  package.xml
ros2_ws/src/my_moveit_config/config/: name.srdf
